<resources>
    <string name="app_name">CareSwitchApplication</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="feel_sick">Feeling Sick?</string>
    <string name="skip_button">Skip</string>
    <string name="next_button">Next</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Log In</string>
    <string name="full_name">Full Name</string>
    <string name="back_to_home">Back to Home</string>
    <string name="reports">Reports</string>
    <string name="all">Al</string>
    <string name="hospital">Hospital</string>
    <string name="ar_diagnose_dwt">AR Diagnose: DWT</string>
    <string name="payment">Payment</string>
    <string name="discover">Discover</string>
    <string name="results">Results</string>
    <string name="profile">Profile</string>
    <string name="latestReport">Your latest reports</string>
    <string name="searchText">What are you looking for?</string>
</resources>