<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/logo"
        android:layout_width="171dp"
        android:layout_height="145dp"
        android:src="@drawable/ic_logo"
        android:layout_marginTop="76dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="68dp" />

    <TextView
        android:id="@+id/emailHere"
        android:layout_width="45dp"
        android:layout_height="23dp"
        android:layout_below="@id/logo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="2dp"
        android:text="@string/prompt_email"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="236dp" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailHere"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="259dp" />

    <TextView
        android:id="@+id/passwordHere"
        android:layout_width="65dp"
        android:layout_height="23dp"
        android:layout_below="@id/inputEmail"
        android:layout_marginStart="34dp"
        android:layout_marginTop="23dp"
        android:text="@string/prompt_password"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="324dp" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordHere"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="345dp"
        android:layout_height="54dp"
        android:layout_below="@id/inputPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/blue_theme"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="100dp"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="417dp" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"

        android:layout_centerVertical="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="80dp"
        android:src="@drawable/ic_careswitch" />


</RelativeLayout>